diesel_compile_tests/tests/fail/derive/bad_treat_none_as_null.stderr
error: expected `=`
  --> tests/fail/derive/bad_treat_none_as_null.rs:13:28
   |
13 | #[diesel(treat_none_as_null("true"))]
   |                            ^

error: unexpected end of input, expected `=`
  --> tests/fail/derive/bad_treat_none_as_null.rs:21:28
   |
21 | #[diesel(treat_none_as_null)]
   |                            ^
   |
   = help: The correct format looks like `#[diesel(treat_none_as_null = true)]`

error: expected boolean literal
  --> tests/fail/derive/bad_treat_none_as_null.rs:29:31
   |
29 | #[diesel(treat_none_as_null = "foo")]
   |                               ^^^^^
